Add a FoundationDB backend: the store, and the server around it
The third shared backend, built on the spike in .todo/022. Two modules and no
change to any existing one, beyond the two registrations a new backend owes the
README and one shared-harness fix below.

The layout was the decision to take first, and the 100,000-byte value ceiling
took it: one FoundationDB key per hash field and per collection member, not a
chunked blob. It pays for itself twice — a range read makes reading a value free,
and writers on one expirations bucket then write different keys, so the case
architecture.md §11.4 records etcd losing 19% of measured 0.000 conflicts here
and lost nothing. Real multi-key transactions removed three more things the other
shared backends need: no version counter, no tombstones, and no del-versus-
expired guesswork, since a removal and its announcement are one commit with the
reason as a field.

What FoundationDB does not have shapes the rest. No TTL of any kind, so expiry is
entirely the adapter's — a deadline index the same transaction as the deadline
keeps in step, and a sweeper elected one per database by a lease. No range watch,
so key events travel through an append-only log keyed by the cluster's own commit
versionstamp, read forward from a cursor and woken by a watch on a counter; being
commit order rather than a clock, it has neither the cursor lag nor the clock
hazard §12.5 had to accept. And no HTTP API at all, so this is the one backend
with a prerequisite outside the jar: the native libfdb_c, which the tests fetch
and verify per platform and which .todo/014 now records as a condition of the
image.

Two things bit that the spike had not:

- fdb.open() does not look at the cluster file. A path that is not there fails at
  the first operation with "No cluster file found", not naming the file it was
  given, so the store checks it and says which one it was.
- BackendSpiBenchmark's 100 KB session case is one attribute, which this backend
  refuses. A 